Bug #27379: On selection of 'Visibility: show always option it should display place on calendar field as per IMATHAS.   - Added place on calendar field for 'Show Always' of inline text.   - Handled by javascript, hide and show.

--- a/web/css/calendar.css
+++ b/web/css/calendar.css
@@ -5,8 +5,8 @@ body {
     font-size: 14px;
 }
 
-.show-all{
-    height: 303px;
-    overflow: auto;
-}
+/*.show-all{*/
+    /*height: 303px;*/
+    /*overflow: auto;*/
+/*}*/
 
